[fix] list nesting's padding being too large

--- a/assets/main.css
+++ b/assets/main.css
@@ -429,6 +429,10 @@ details[open] summary {
     fill: #f0883e;
 }
 
+ul ul {
+    padding-left: 20px;
+}
+
 /* latin */
 @font-face {
     font-family: Roboto;
